tests/ui/panic-handler/panic-handler-wrong-location.stderr
error: `#[panic_handler]` is only valid on functions
  --> $DIR/panic-handler-wrong-location.rs:6:1
   |
LL | #[panic_handler]
   | ^^^^^^^^^^^^^^^^

error: `#[panic_handler]` required, but not found
  --> $SRC_DIR/core/src/panic.rs:LL:COL
   |
   = note: expected because `#[panic_handler]` was declared here in crate `core`
   |
   = help: expected at least one implementation in crate `panic_handler_wrong_location` or any of its dependencies

error: aborting due to 2 previous errors

